# Job_Tracker

./: .env.example  .gitignore  pyproject.toml
alembic/: env.py
alembic/versions/: 2632e6a0757e_initial_schema.py  b007e65069e2_add_raw_email_sync_state_processing_.py  c9c8b7e3fe09_add_review_and_cost_columns.py  cb36d89e71cf_add_processing_state_to_raw_emails.py
data/: tracker.db
exports/: job_applications.xlsx
src/job_tracker/: __init__.py  main.py
src/job_tracker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/job_tracker/api/: auth.py  jobs.py  run.py
src/job_tracker/config/: settings.py
src/job_tracker/database/: session.py
src/job_tracker/graph/: __init__.py  nodes.py  state.py  workflow.py
src/job_tracker/models/: __init__.py  application.py  gmail_sync_state.py  processing_run.py  raw_email.py  status_history.py
src/job_tracker/prompts/: __init__.py  classifier_prompt.py  extract_prompt.py  status_prompt.py  summary_prompt.py
src/job_tracker/repositories/: __init__.py  application.py  base.py  gmail_sync_state.py  processing_run.py  raw_email.py  status_history.py
src/job_tracker/scheduler/: jobs.py
src/job_tracker/schemas/: __init__.py  application.py  email.py  extraction.py  status.py
src/job_tracker/services/: __init__.py  application_service.py  excel_service.py  gmail_service.py  llm_service.py
src/job_tracker/utils/: logging.py  matching.py  normalization.py
tests/: conftest.py  test_excel.py  test_matching.py  test_normalization.py  test_pipeline.py
