[project]
name = "job-tracker"
version = "0.1.0"
description = "AI Job Application Email Tracker Agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "langgraph>=0.1.0",
    "langchain>=0.2.0",
    "langchain-openai>=0.1.0",
    "google-auth>=2.30.0",
    "google-auth-oauthlib>=1.2.0",
    "google-auth-httplib2>=0.2.0",
    "google-api-python-client>=2.133.0",
    "openpyxl>=3.1.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    "apscheduler>=3.10.0",
    "rapidfuzz>=3.9.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]
